--- a/index.html
+++ b/index.html
@@ -124,40 +124,40 @@
     </header>
     <div class="container">
         <nav>
-            <a href="events.html">Book Directly For Events</a>
             <a href="contact.html">Contact Us</a>
             <a href="about.html">About Us</a>
+            <a href="events.html">Events</a>
         </nav>
         <section>
             <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="h1.jpg" alt="Property 1">
+                <img src="PropertyPics/h1.jpg" alt="Property 1">
                 <div class="property-info">
                     <h2>Property 1</h2>
                     <p>Location: Property 1 Location</p>
                     <p>Price: $X</p>
                     <p>More information about Property 1.</p>
-                    <a href="property1.html">See More</a>
+                    <a href="Properties/property1.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="h2.jpg" alt="Property 2">
+                <img src="PropertyPics/h2.jpg" alt="Property 2">
                 <div class="property-info">
                     <h2>Property 2</h2>
                     <p>Location: Property 2 Location</p>
                     <p>Price: $Y</p>
                     <p>More information about Property 2.</p>
-                    <a href="property2.html">See More</a>
+                    <a href="Properties/property2.html">See More</a>
                 </div>
             </div>
             <!-- Repeat the above div for each property -->
             <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="h3.jpg" alt="Property 3">
+                <img src="PropertyPics/h3.jpg" alt="Property 3">
                 <div class="property-info">
                     <h2>Property 3</h2>
                     <p>Location: Property 3 Location</p>
                     <p>Price: $Z</p>
                     <p>More information about Property 3.</p>
-                    <a href="property3.html">See More</a>
+                    <a href="Properties/property3.html">See More</a>
                 </div>
             </div>
         </section>
