--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             z-index: 1;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .property.active .property-info {
+        .property:hover .property-info {
             display: block;
         }
         .property-info h2 {
@@ -129,7 +129,7 @@
             <a href="events.html">Events</a>
         </nav>
         <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
+            <div class="property">
                 <img src="PropertyPics/h1.jpg" alt="Property 1">
                 <div class="property-info">
                     <h2>Property 1</h2>
@@ -139,7 +139,7 @@
                     <a href="Properties/property1.html">See More</a>
                 </div>
             </div>
-            <div class="property" onclick="togglePropertyInfo(this)">
+            <div class="property">
                 <img src="PropertyPics/h2.jpg" alt="Property 2">
                 <div class="property-info">
                     <h2>Property 2</h2>
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <!-- Repeat the above div for each property -->
-            <div class="property" onclick="togglePropertyInfo(this)">
+            <div class="property">
                 <img src="PropertyPics/h3.jpg" alt="Property 3">
                 <div class="property-info">
                     <h2>Property 3</h2>
@@ -165,10 +165,5 @@
     <footer>
         <p>@BryanFendley</p>
     </footer>
-    <script>
-        function togglePropertyInfo(property) {
-            property.classList.toggle('active');
-        }
-    </script>
 </body>
 </html>
