--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+    <style>
+        /* Add your CSS styles here */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .realtor-info {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .realtor-info img {
+            width: 200px; /* Adjust size as needed */
+            border-radius: 50%; /* Make the image round */
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>About Us</h1>
+    </header>
+    <div class="container">
+        <div class="realtor-info">
+            <img src="placeholder_headshot.jpg" alt="Realtor Headshot">
+            <h2>John Doe</h2>
+            <p>Realtor</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in purus eu felis placerat consectetur. Proin nec justo id mi eleifend euismod non vitae quam. Sed ac suscipit sapien. Nulla facilisi. Donec vehicula nisi nec justo finibus, vitae rutrum quam condimentum.</p>
+            <p>Curabitur consequat eros vel velit rutrum, eget varius nisl fringilla. Integer efficitur auctor purus, ac eleifend eros condimentum vel. Suspendisse potenti. Morbi nec odio et magna placerat egestas. Sed ut metus tristique, laoreet lectus a, bibendum tortor. Quisque ut purus arcu.</p>
+        </div>
+    </div>
+</body>
+</html>
 
