--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="container">
         <nav>
             <a href="contact.html">Contact Us</a>
-            <a href="about.html">About Us</a>
+            <a href="AboutUs.html">About Us</a>
             <a href="events.html">Events</a>
         </nav>
         <section>
