--- a/SocialsEvents.html
+++ b/SocialsEvents.html
@@ -1,1 +1,84 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Social</title>
+    <style>
+        /* Add your CSS styles here */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .social-links {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .social-links a {
+            display: inline-block;
+            margin: 0 10px;
+            color: #333;
+            text-decoration: none;
+            padding: 10px 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .social-links a:hover {
+            background-color: #ddd;
+        }
+        .event-links {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .event-links a {
+            display: inline-block;
+            margin: 0 10px;
+            color: #333;
+            text-decoration: none;
+            padding: 10px 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .event-links a:hover {
+            background-color: #ddd;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Social</h1>
+    </header>
+    <div class="container">
+        <div class="social-links">
+            <h2>Social Media</h2>
+            <a href="https://www.facebook.com/">Facebook</a>
+            <a href="https://twitter.com/">Twitter</a>
+            <a href="https://www.instagram.com/">Instagram</a>
+            <!-- Add more social media links as needed -->
+        </div>
+        <div class="event-links">
+            <h2>Social Events</h2>
+            <a href="events.html">Event 1</a>
+            <a href="events.html">Event 2</a>
+            <a href="events.html">Event 3</a>
+            <!-- Add more social event links as needed -->
+        </div>
+    </div>
+</body>
+</html>
