--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
     </header>
     <div class="container">
         <nav>
-            <a href="contact.html">Contact Us</a>
-            <a href="AboutUs.html">About Us</a>
-            <a href="events.html">Events</a>
+            <a href="contact.html">Contact Me</a>
+            <a href="AboutUs.html">About V</a>
+            <a href="SocialsEvents.html">Socials & Events</a>
         </nav>
         <section>
             <div class="property">
