--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
         header {
             background-color: #333;
             color: #fff;
-            padding: 10px 0;
+            padding: 10px;
             text-align: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .contact-info {
+            text-align: right;
+        }
+        .contact-info p {
+            margin: 5px 0;
         }
         nav {
             text-align: center;
@@ -121,6 +130,11 @@
 <body>
     <header>
         <h1>Digital Brochure</h1>
+        <div class="contact-info">
+            <p>Email: example@example.com</p>
+            <p>Phone: 123-456-7890</p>
+            <p><a href="https://calendly.com/">Calendly</a></p>
+        </div>
     </header>
     <div class="container">
         <nav>
