--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             align-items: center;
         }
         .contact-info {
-            text-align: right;
+            text-align: left;
         }
         .contact-info p {
             margin: 5px 0;
