--- a/index.html
+++ b/index.html
@@ -3,35 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Brochure</title>
+    <title>Real Estate Agency</title>
     <style>
         /* Add your CSS styles here */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f0f0f0; /* Updated background color */
             color: #333;
-            min-height: 100vh; /* Ensure that body fills the viewport height */
-            position: relative; /* Needed for footer positioning */
+            min-height: 100vh;
+            position: relative;
         }
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            padding-bottom: 60px; /* Adjust bottom padding to accommodate footer */
+            padding-bottom: 60px;
         }
         header {
-            background-color: #333;
+            background-color: #333; /* Updated header background color */
             color: #fff;
             padding: 10px;
-            text-align: center;
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start; /* Align to the left */
             align-items: center;
         }
         .contact-info {
-            text-align: left;
+            text-align: left; /* Align contact info to the left */
+            margin-left: 20px; /* Add some space from the left */
         }
         .contact-info p {
             margin: 5px 0;
@@ -129,7 +129,6 @@
 </head>
 <body>
     <header>
-        <h1>Digital Brochure</h1>
         <div class="contact-info">
             <p>Email: example@example.com</p>
             <p>Phone: 123-456-7890</p>
