--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             margin-top: 50px;
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: space-evenly; /* Space evenly */
         }
         .property {
             position: relative;
@@ -171,6 +171,66 @@
                     <p>Price: $Z</p>
                     <p>More information about Property 3.</p>
                     <a href="Properties/property3.html">See More</a>
+                </div>
+            </div>
+            <div class="property">
+                <img src="PropertyPics/h4.jpg" alt="Property 4">
+                <div class="property-info">
+                    <h2>Property 4</h2>
+                    <p>Location: Property 4 Location</p>
+                    <p>Price: $W</p>
+                    <p>More information about Property 4.</p>
+                    <a href="Properties/property4.html">See More</a>
+                </div>
+            </div>
+            <div class="property">
+                <img src="PropertyPics/h5.jpg" alt="Property 5">
+                <div class="property-info">
+                    <h2>Property 5</h2>
+                    <p>Location: Property 5 Location</p>
+                    <p>Price: $V</p>
+                    <p>More information about Property 5.</p>
+                    <a href="Properties/property5.html">See More</a>
+                </div>
+            </div>
+            <div class="property">
+                <img src="PropertyPics/h6.jpg" alt="Property 6">
+                <div class="property-info">
+                    <h2>Property 6</h2>
+                    <p>Location: Property 6 Location</p>
+                    <p>Price: $U</p>
+                    <p>More information about Property 6.</p>
+                    <a href="Properties/property6.html">See More</a>
+                </div>
+            </div>
+            <div class="property">
+                <img src="PropertyPics/h7.jpg" alt="Property 7">
+                <div class="property-info">
+                    <h2>Property 7</h2>
+                    <p>Location: Property 7 Location</p>
+                    <p>Price: $T</p>
+                    <p>More information about Property 7.</p>
+                    <a href="Properties/property7.html">See More</a>
+                </div>
+            </div>
+            <div class="property">
+                <img src="PropertyPics/h8.jpg" alt="Property 8">
+                <div class="property-info">
+                    <h2>Property 8</h2>
+                    <p>Location: Property 8 Location</p>
+                    <p>Price: $S</p>
+                    <p>More information about Property 8.</p>
+                    <a href="Properties/property8.html">See More</a>
+                </div>
+            </div>
+            <div class="property">
+                <img src="PropertyPics/h9.jpg" alt="Property 9">
+                <div class="property-info">
+                    <h2>Property 9</h2>
+                    <p>Location: Property 9 Location</p>
+                    <p>Price: $R</p>
+                    <p>More information about Property 9.</p>
+                    <a href="Properties/property9.html">See More</a>
                 </div>
             </div>
         </section>
