--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@
         }
         section {
             margin-top: 50px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly; /* Space evenly */
+            display: grid;
+            grid-template-columns: repeat(3, 1fr); /* 3 columns */
+            gap: 20px; /* Gap between items */
+            justify-content: space-evenly; /* Center items horizontally */
         }
         .property {
             position: relative;
-            width: 200px;
-            margin: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
             background-color: #fff;
@@ -142,7 +141,7 @@
             <a href="SocialsEvents.html">Socials & Events</a>
         </nav>
         <section>
-            <div class="property">
+            <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h1.jpg" alt="Property 1">
                 <div class="property-info">
                     <h2>Property 1</h2>
@@ -152,7 +151,7 @@
                     <a href="Properties/property1.html">See More</a>
                 </div>
             </div>
-            <div class="property">
+            <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h2.jpg" alt="Property 2">
                 <div class="property-info">
                     <h2>Property 2</h2>
@@ -163,7 +162,7 @@
                 </div>
             </div>
             <!-- Repeat the above div for each property -->
-            <div class="property">
+            <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h3.jpg" alt="Property 3">
                 <div class="property-info">
                     <h2>Property 3</h2>
@@ -173,7 +172,7 @@
                     <a href="Properties/property3.html">See More</a>
                 </div>
             </div>
-            <div class="property">
+            <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h4.jpg" alt="Property 4">
                 <div class="property-info">
                     <h2>Property 4</h2>
@@ -183,7 +182,7 @@
                     <a href="Properties/property4.html">See More</a>
                 </div>
             </div>
-            <div class="property">
+            <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h5.jpg" alt="Property 5">
                 <div class="property-info">
                     <h2>Property 5</h2>
@@ -193,7 +192,7 @@
                     <a href="Properties/property5.html">See More</a>
                 </div>
             </div>
-            <div class="property">
+            <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h6.jpg" alt="Property 6">
                 <div class="property-info">
                     <h2>Property 6</h2>
@@ -203,7 +202,7 @@
                     <a href="Properties/property6.html">See More</a>
                 </div>
             </div>
-            <div class="property">
+            <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h7.jpg" alt="Property 7">
                 <div class="property-info">
                     <h2>Property 7</h2>
@@ -213,7 +212,7 @@
                     <a href="Properties/property7.html">See More</a>
                 </div>
             </div>
-            <div class="property">
+            <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h8.jpg" alt="Property 8">
                 <div class="property-info">
                     <h2>Property 8</h2>
@@ -223,7 +222,7 @@
                     <a href="Properties/property8.html">See More</a>
                 </div>
             </div>
-            <div class="property">
+            <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h9.jpg" alt="Property 9">
                 <div class="property-info">
                     <h2>Property 9</h2>
@@ -238,5 +237,10 @@
     <footer>
         <p>@BryanFendley</p>
     </footer>
+    <script>
+        function togglePropertyInfo(property) {
+            property.classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
