--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             color: #fff;
             padding: 10px;
             display: flex;
-            justify-content: space-between; /* Align buttons to the right */
+            justify-content: space-between; /* Align elements */
             align-items: center;
             position: fixed; /* Fixed position to stay at the top */
             top: 0; /* Position at the top */
@@ -152,110 +152,6 @@
             <a href="SocialsEvents.html">Socials & Events</a>
         </nav>
         <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
-            </div>
-            <!-- Repeat the above div for each property -->
-        </section>
-            <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
-            </div>
-            <!-- Repeat the above div for each property -->
-        </section>
-            <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
-            </div>
-            <!-- Repeat the above div for each property -->
-        </section>
-            <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
-            </div>
-            <!-- Repeat the above div for each property -->
-        </section>
-            <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
-            </div>
-            <!-- Repeat the above div for each property -->
-        </section>
-            <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
-            </div>
-            <!-- Repeat the above div for each property -->
-        </section>
-            <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
-            </div>
-            <!-- Repeat the above div for each property -->
-        </section>
-            <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
-            </div>
-            <!-- Repeat the above div for each property -->
-        </section>
-            <section>
             <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h1.jpg" alt="Property 1">
                 <div class="property-info">
