--- a/index.html
+++ b/index.html
@@ -138,14 +138,13 @@
 </head>
 <body>
     <header>
-        <h1 style="margin: 0;">Real Estate Agency</h1>
-    </header>
-    <div class="container">
-        <nav>
+        <div class="header-buttons">
             <a href="contact.html">Contact Me</a>
             <a href="AboutUs.html">About V</a>
             <a href="SocialsEvents.html">Socials & Events</a>
-        </nav>
+        </div>
+    </header>
+    <div class="container">
         <section>
             <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h1.jpg" alt="Property 1">
